--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ nav span:hover{ color:#fff; }
 }
 
 .section.contact h1{
-  margin-top:18px; /* ⬅ ajuste solicitado */
+  margin-top:32px; /* ⬅ bajado más */
 }
 
 /* ===== CONTENT ===== */
@@ -335,10 +335,8 @@ footer{
 </footer>
 
 <script>
-/* ===== ENTRADA ===== */
 window.addEventListener("load",()=>{ document.body.style.opacity="1"; });
 
-/* ===== CURSOR ===== */
 const cursor=document.querySelector(".cursor");
 let mx=0,my=0,x=0,y=0;
 addEventListener("mousemove",e=>{ mx=e.clientX; my=e.clientY; });
@@ -348,7 +346,6 @@ addEventListener("mousemove",e=>{ mx=e.clientX; my=e.clientY; });
   requestAnimationFrame(animateCursor);
 })();
 
-/* ===== HERO TEXT ===== */
 const hero=document.getElementById("heroTitle");
 "Industrial Design".split("").forEach((char,i)=>{
   const span=document.createElement("span");
@@ -368,13 +365,11 @@ setTimeout(()=>{
   });
 },200);
 
-/* ===== REVEAL ===== */
 const observer=new IntersectionObserver(entries=>{
   entries.forEach(e=>{ if(e.isIntersecting) e.target.classList.add("visible"); });
 },{threshold:.2});
 document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 
-/* ===== NAVIGATION ===== */
 document.querySelectorAll("nav span").forEach(btn=>{
   btn.addEventListener("click",()=>{
     const index=btn.dataset.scroll;
