--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ nav span:hover{ color:#fff; }
 }
 
 .section.contact h1{
-  margin-top:48px; /* ⬅ bajado más */
+  margin-top:50px; /* ⬅ ajuste definitivo */
 }
 
 /* ===== CONTENT ===== */
