--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ nav span:hover{ color:#fff; }
 }
 
 .section.contact h1{
-  margin-top:58px; /* ⬅ ajuste ultrafino */
+  margin-top:58px;
 }
 
 /* ===== CONTENT ===== */
@@ -317,14 +317,14 @@ footer{
     <h1 class="reveal">Contacto</h1>
 
     <div class="contact-list reveal">
-      <a href="https://www.linkedin.com/in/tu-perfil" target="_blank">
+      <a href="https://www.linkedin.com/in/luisblasiber/" target="_blank">
         <i class="fa-brands fa-linkedin-in"></i> LinkedIn
       </a>
-      <a href="mailto:tucorreo@gmail.com">
-        <i class="fa-regular fa-envelope"></i> tucorreo@gmail.com
+      <a href="mailto:luisblascoibanezberbel@gmail.com">
+        <i class="fa-regular fa-envelope"></i> luisblascoibanezberbel@gmail.com
       </a>
-      <a href="tel:+34600000000">
-        <i class="fa-solid fa-phone"></i> +34 600 000 000
+      <a href="tel:+34630511806">
+        <i class="fa-solid fa-phone"></i> +34 630 511 806
       </a>
     </div>
   </div>
