--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
 
 <style>
 
@@ -39,7 +40,7 @@ body{
   z-index:1000;
 }
 
-/* ===== NAV ===== */
+/* ===== HEADER ===== */
 nav{
   position:fixed;
   top:0;
@@ -51,7 +52,7 @@ nav{
   justify-content:center;
   align-items:center;
   gap:50px;
-  background:rgba(10,10,10,.4);
+  background:rgba(10,10,10,0.4);
   backdrop-filter:blur(12px);
   z-index:100;
 }
@@ -63,6 +64,7 @@ nav span{
   color:#ccc;
   cursor:pointer;
   transition:.4s;
+  padding-top:6px;
 }
 
 nav span:hover{ color:#fff; }
@@ -76,8 +78,18 @@ nav span:hover{ color:#fff; }
   padding:120px 10% 0;
 }
 
+/* ===== HERO ===== */
 .section:first-of-type .content-center{
   margin-top:-70px;
+}
+
+/* ===== CONTACTO ===== */
+.section.contact{
+  padding-top:120px;
+}
+
+.section.contact .content-left{
+  margin-top:-165px;
 }
 
 .section.contact h1{
@@ -91,7 +103,7 @@ nav span:hover{ color:#fff; }
 }
 
 .content-left{
-  max-width:1100px;
+  max-width:900px;
   width:100%;
   margin-left:6vw;
 }
@@ -101,6 +113,10 @@ h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
+}
+
+.content-center h1{
+  font-size:clamp(84px,7vw,140px);
 }
 
 p{
@@ -113,63 +129,60 @@ p{
 }
 
 /* ===== ABOUT ===== */
+.about{
+  display:block;
+}
+
 .about-content{
   display:flex;
   gap:32px;
-  align-items:flex-start;
+}
+
+.about-text{
+  max-width:480px;
+}
+
+.about-photo{
+  margin-top:23px;
 }
 
 .about-photo img{
   width:288px;
   filter:grayscale(100%) contrast(1.05);
-  opacity:.9;
+  opacity:0.9;
 }
 
 /* ===== PORTFOLIO ===== */
-.portfolio-grid{
-  margin-top:64px;
-  display:grid;
-  grid-template-columns:repeat(2,1fr);
-  gap:48px 64px;
+.portfolio-list{
+  margin-top:42px;
+  display:flex;
+  flex-direction:column;
+  gap:36px;
+  max-width:700px;
 }
 
 .project{
-  cursor:pointer;
+  display:flex;
+  flex-direction:column;
+  gap:8px;
 }
 
-.project-image{
-  aspect-ratio:4/3;
-  overflow:hidden;
-  background:#111;
-}
-
-.project-image img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  filter:grayscale(100%) contrast(1.05);
-  transition:.6s cubic-bezier(.2,.7,.1,1);
-}
-
-.project:hover img{
-  transform:scale(1.04);
-  filter:grayscale(0%);
-}
-
-.project-info{
-  margin-top:14px;
-}
-
-.project-info h3{
-  font-size:16px;
-  font-weight:500;
-}
-
-.project-info span{
-  font-size:12px;
-  letter-spacing:.08em;
-  color:#777;
+.project span{
+  font-size:11px;
+  letter-spacing:.25em;
   text-transform:uppercase;
+  color:#777;
+}
+
+.project h3{
+  font-size:18px;
+  font-weight:500;
+  color:#f0f0f0;
+}
+
+.project p{
+  font-size:14px;
+  max-width:520px;
 }
 
 /* ===== CONTACT ===== */
@@ -182,14 +195,17 @@ p{
 
 .contact-list a{
   display:flex;
-  gap:14px;
   align-items:center;
+  gap:14px;
+  font-size:15px;
   color:#aaa;
   text-decoration:none;
-  transition:.3s;
 }
 
-.contact-list a:hover{ color:#fff; }
+.contact-list i{
+  width:18px;
+  opacity:.7;
+}
 
 /* ===== REVEAL ===== */
 .reveal{
@@ -201,14 +217,18 @@ p{
 
 .reveal.visible{
   opacity:1;
-  transform:none;
-  filter:none;
+  transform:translateY(0);
+  filter:blur(0);
 }
 
-/* ===== RESPONSIVE ===== */
-@media(max-width:900px){
-  .portfolio-grid{ grid-template-columns:1fr; }
-  .about-content{ flex-direction:column; }
+/* ===== FOOTER ===== */
+footer{
+  text-align:center;
+  padding:48px 0 36px;
+  font-size:11px;
+  letter-spacing:.18em;
+  color:#cfcfcf;
+  border-top:1px solid #1c1c1c;
 }
 
 </style>
@@ -221,10 +241,11 @@ p{
   <span data-scroll="0">Inicio</span>
   <span data-scroll="1">Sobre mí</span>
   <span data-scroll="2">Portfolio</span>
-  <span data-scroll="3">Contacto</span>
+  <span data-scroll="3">CV</span>
+  <span data-scroll="4">Contacto</span>
 </nav>
 
-<!-- HERO -->
+<!-- INICIO -->
 <section class="section">
   <div class="content-center">
     <h1 id="heroTitle"></h1>
@@ -234,14 +255,22 @@ p{
 
 <!-- SOBRE MI -->
 <section class="section">
-  <div class="content-left">
+  <div class="content-left about">
     <h1 class="reveal">Sobre mí</h1>
-    <div class="about-content reveal">
-      <p>
-        Ingeniero en diseño industrial con perfil ecléctico y adaptable, situado entre lo técnico y lo creativo.
-        Disfruto del proceso de diseño desde lo conceptual hasta la producción final, con soluciones consistentes.
-      </p>
-      <div class="about-photo">
+
+    <div class="about-content">
+      <div class="about-text reveal">
+        <p>
+          Ingeniero en diseño industrial de 24 años, con base en Valencia. Me considero una persona
+          ecléctica y flexible, capaz de adaptarse a distintos entornos. No me sitúo ni en un extremo
+          puramente artístico ni estrictamente técnico, sino en un punto intermedio. He estudiado en
+          la UPV, con formación inicial en la UJI y un Erasmus en Middlesex University. Cuento además
+          con una FP en electricidad. Disfruto del proceso de diseño desde lo conceptual hasta la
+          producción final, con soluciones consistentes.
+        </p>
+      </div>
+
+      <div class="about-photo reveal">
         <img src="foto.jpg" alt="Foto personal">
       </div>
     </div>
@@ -254,14 +283,33 @@ p{
     <h1 class="reveal">Portfolio</h1>
     <p class="reveal">Selección de proyectos de diseño industrial.</p>
 
-    <div class="portfolio-grid">
-      <div class="project reveal"><div class="project-image"><img src="project-1.jpg"></div><div class="project-info"><h3>NODE</h3><span>Producto</span></div></div>
-      <div class="project reveal"><div class="project-image"><img src="project-2.jpg"></div><div class="project-info"><h3>FRAME</h3><span>Estructura</span></div></div>
-      <div class="project reveal"><div class="project-image"><img src="project-3.jpg"></div><div class="project-info"><h3>AXIS</h3><span>Concepto</span></div></div>
-      <div class="project reveal"><div class="project-image"><img src="project-4.jpg"></div><div class="project-info"><h3>VERTEX</h3><span>Prototipo</span></div></div>
-      <div class="project reveal"><div class="project-image"><img src="project-5.jpg"></div><div class="project-info"><h3>MODULE</h3><span>Sistema</span></div></div>
-      <div class="project reveal"><div class="project-image"><img src="project-6.jpg"></div><div class="project-info"><h3>LINEA</h3><span>Exploración</span></div></div>
+    <div class="portfolio-list">
+      <div class="project reveal">
+        <span>Producto · Sistema</span>
+        <h3>NODE — Sistema modular</h3>
+        <p>Sistema modular desarrollado como proyecto final, enfocado en estructura y fabricación.</p>
+      </div>
+
+      <div class="project reveal">
+        <span>Mobiliario · A medida</span>
+        <h3>Sixay — Cómoda personalizada</h3>
+        <p>Proyecto real de diseño y producción durante prácticas profesionales.</p>
+      </div>
+
+      <div class="project reveal">
+        <span>Investigación · Tecnología</span>
+        <h3>Impresión 3D aplicada al producto</h3>
+        <p>Exploración de fabricación aditiva aplicada a producto industrial.</p>
+      </div>
     </div>
+  </div>
+</section>
+
+<!-- CV -->
+<section class="section">
+  <div class="content-left">
+    <h1 class="reveal">CV</h1>
+    <p class="reveal">Formación académica y experiencia profesional.</p>
   </div>
 </section>
 
@@ -269,75 +317,57 @@ p{
 <section class="section contact">
   <div class="content-left">
     <h1 class="reveal">Contacto</h1>
+
     <div class="contact-list reveal">
-      <a href="mailto:luisblascoibanezberbel@gmail.com"><i class="fa-regular fa-envelope"></i> luisblascoibanezberbel@gmail.com</a>
-      <a href="tel:+34630511806"><i class="fa-solid fa-phone"></i> +34 630 511 806</a>
-      <a href="https://www.linkedin.com/in/luisblasiber/" target="_blank"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a>
+      <a href="mailto:luisblascoibanezberbel@gmail.com">
+        <i class="fa-regular fa-envelope"></i> luisblascoibanezberbel@gmail.com
+      </a>
+      <a href="tel:+34630511806">
+        <i class="fa-solid fa-phone"></i> +34 630 511 806
+      </a>
+      <a href="https://www.linkedin.com/in/luisblasiber/" target="_blank">
+        <i class="fa-brands fa-linkedin-in"></i> LinkedIn
+      </a>
     </div>
   </div>
 </section>
 
-<script>
+<footer>
+© 2026 · Luis Blasco-Ibáñez Berbel · Ingeniero en diseño industrial
+</footer>
 
-/* ===== ENTRADA ===== */
+<script>
 window.addEventListener("load",()=>{ document.body.style.opacity="1"; });
 
-/* ===== CURSOR ===== */
 const cursor=document.querySelector(".cursor");
 let mx=0,my=0,x=0,y=0;
 addEventListener("mousemove",e=>{ mx=e.clientX; my=e.clientY; });
-(function animateCursor(){
-  x+=(mx-x)*0.2;
-  y+=(my-y)*0.2;
-  cursor.style.left=x+"px";
-  cursor.style.top=y+"px";
-  requestAnimationFrame(animateCursor);
+(function animate(){
+  x+=(mx-x)*0.2; y+=(my-y)*0.2;
+  cursor.style.left=x+"px"; cursor.style.top=y+"px";
+  requestAnimationFrame(animate);
 })();
 
-/* ===== HERO TEXT ===== */
 const hero=document.getElementById("heroTitle");
-"Industrial Design".split("").forEach((char,i)=>{
-  const span=document.createElement("span");
-  span.textContent=char;
-  span.style.opacity=0;
-  span.style.display="inline-block";
-  span.style.transform="translateY(40px)";
-  span.style.filter="blur(8px)";
-  span.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.03}s`;
-  hero.appendChild(span);
+"Industrial Design".split("").forEach((c,i)=>{
+  const s=document.createElement("span");
+  s.textContent=c;
+  s.style.opacity=0;
+  s.style.transform="translateY(40px)";
+  s.style.transition=`.5s ${i*0.03}s`;
+  hero.appendChild(s);
 });
-
 setTimeout(()=>{
-  hero.querySelectorAll("span").forEach(span=>{
-    span.style.opacity=1;
-    span.style.transform="translateY(0)";
-    span.style.filter="blur(0)";
+  hero.querySelectorAll("span").forEach(s=>{
+    s.style.opacity=1;
+    s.style.transform="translateY(0)";
   });
 },200);
 
-/* ===== REVEAL ===== */
 const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>{
-    if(e.isIntersecting) e.target.classList.add("visible");
-  });
-},{threshold:.15});
-
+  entries.forEach(e=>{ if(e.isIntersecting) e.target.classList.add("visible"); });
+},{threshold:.2});
 document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
-
-/* ===== NAV SCROLL ===== */
-document.querySelectorAll("nav span").forEach(btn=>{
-  btn.addEventListener("click",()=>{
-    const index=btn.dataset.scroll;
-    const section=document.querySelectorAll(".section")[index];
-    const offset=180;
-
-    window.scrollTo({
-      top:section.offsetTop-offset,
-      behavior:"smooth"
-    });
-  });
-});
-
 </script>
 
 </body>
